--- a/src/app/Overlay/RecordingOverlay.xaml
+++ b/src/app/Overlay/RecordingOverlay.xaml
@@ -60,7 +60,8 @@
             </StackPanel>
 
             <!-- Audio level meter -->
-            <Border Grid.Row="1" 
+            <Border x:Name="AudioLevelMeter"
+                    Grid.Row="1" 
                     Margin="0,10,0,0"
                     Height="20" 
                     BorderBrush="#CCCCCC" 
@@ -79,8 +80,10 @@
             <!-- Transcribing overlay (initially hidden) -->
             <Grid x:Name="TranscribingOverlay" 
                   Grid.RowSpan="2" 
-                  Background="#F0FFFFFF"
-                  Visibility="Collapsed">
+                  Background="Transparent"
+                  Visibility="Collapsed"
+                  Width="320"
+                  Height="92">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                     <!-- Spinner -->
                     <Grid Width="48" Height="48" Margin="0,0,0,12">
